ops/server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: be-issuer
spec:
  ingressClassName: nginx
  rules:
   -   host: podcast.be.bikash.me 
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 8000
  tls:
  - hosts:
    - podcast.be.bikash.me
    secretName: letsencrypt-prod
